--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- reference your copy Font Awesome here (from our CDN or by hosting yourself) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>One page demo</title>
 </head>
 <body>
@@ -21,7 +24,10 @@
             <li class="menu-item">Contact</li>
         </div>
         <div class="contact">
-            facebook twitter youtube
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-linkedin"></i>
+            
         </div>
     </div>
 
@@ -31,27 +37,32 @@
             ví dụ ảnh chạy
         </div>
     </div>
-
-    <div class="footer" height="1000px">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur illo, nesciunt hic voluptates quasi perferendis minima tempore deleniti facere architecto, soluta corporis facilis aut magni modi voluptatem aliquid veniam voluptas!
-            </p>
+    <div class="coming-soon">
+        <div class="head">
+            <h1>Under Construction<h1>
+        </div>
+        <div class="left">
+            <img src="./images/coming-soon-bg.jpg" width="540px" height="630px" alt="">
+        </div>
+        <div class="right">
+            <h2>Our Website Is Almost Ready</h2>
+            <h3>TIME LEFT UNTIL LAUNCHING</h3>
+            <div class="count-down">Day</div>
+            <div class="count-down">Hours</div>
+            <div class="count-down">Minutes</div>
+            <div class="count-down">Seconds</div>
+            <p>We are preparing something amazing and exciting for you. Special surprise for our subscribers only.</p>
+            <input type="text">
+            <div class="icon">
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-instagram"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-whatsapp"></i>
+                
+            </div>
+        </div>
     </div>
+
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
