--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--  Menu  -->
     <div class="header">
         <div class="logo">
-            <img src="./images/logo.png" alt="">
+            <img src="./images/logo.png" alt="" width="90%" height="90%" />
         </div>
         <div class="menu">
             <li class="menu-item">
@@ -54,19 +54,19 @@
                 <ul class="countdown">
                     <li>
                         <span class="days">00</span>
-                        <p class="days_ref">days</p>
+                        <p class="days_ref">DAYS</p>
                     </li>
                     <li>
                         <span class="hours">00</span>
-                        <p class="hours_ref">hours</p>
+                        <p class="hours_ref">HOURS</p>
                     </li>
                     <li>
                         <span class="minutes">00</span>
-                        <p class="minutes_ref">minutes</p>
+                        <p class="minutes_ref">MINUTES</p>
                     </li>
                     <li>
                         <span class="seconds">00</span>
-                        <p class="seconds_ref">seconds</p>
+                        <p class="seconds_ref">SECONDS</p>
                     </li>
                 </ul>
             </div>
@@ -77,33 +77,38 @@
     </div>
     <div class="coming-soon">
         <div class="head">
-            <span><b>Under</b> Construction</span>
+            <span class="header-text"><b>Under</b> Construction</span>
+            <span class="divider-center"></span>
         </div>
         <div class="content-coming-soon">
             <div class="left">
                 <img src="./images/coming-soon-bg.jpg" width="540px" height="630px" alt="">
             </div>
             <div class="right">
-                <h2>Our Website Is Almost Ready</h2>
-                <h3>TIME LEFT UNTIL LAUNCHING</h3>
+                <span class="text-top">Our Website Is Almost Ready</span>
+                <span  class="text-bottom">TIME LEFT UNTIL LAUNCHING</span>
                 <div id="clock">
                     <ul class="countdown">
-                        <li>
-                            <span class="days">00</span>
-                            <p class="days_ref">days</p>
-                        </li>
-                        <li>
-                            <span class="hours">00</span>
-                            <p class="hours_ref">hours</p>
-                        </li>
-                        <li>
-                            <span class="minutes">00</span>
-                            <p class="minutes_ref">minutes</p>
-                        </li>
-                        <li>
-                            <span class="seconds">00</span>
-                            <p class="seconds_ref">seconds</p>
-                        </li>
+                        <div class="">
+                            <li>
+                                <span class="numbers days">00</span>
+                                <p class="days_ref">days</p>
+                            </li>
+                            <li>
+                                <span class="numbers hours">00</span>
+                                <p class="hours_ref">hours</p>
+                            </li>
+                        </div>
+                        <div class="">
+                            <li>
+                                <span class="numbers minutes">00</span>
+                                <p class="minutes_ref">minutes</p>
+                            </li>
+                            <li>
+                                <span class="numbers seconds">00</span>
+                                <p class="seconds_ref">seconds</p>
+                            </li>
+                        </div>
                     </ul>
                 </div>
                 <p>We are preparing something amazing and exciting for you. Special surprise for our subscribers only.</p>
@@ -116,6 +121,54 @@
                     
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="col1 col">
+            <img src="./images/logo.png" alt="">
+            <p>Keep away from people who try to belittle your ambitions Small people always do that but the really great Friendly.</p>
+            <p>+01 - 123 - 4567
+                web@support.com</p>
+            <div class="icon">
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-instagram"></i>
+                <i class="fa fa-whatsapp"></i>
+                    
+            </div>
+        </div>
+        <div class="col2 col">
+            <h2>Our Services</h2>
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Latest News</li>
+            <li>Business Planning</li>
+            <li>Contact Us</li>
+            <li>Privacy Policy</li>
+        </div>
+        <div class="col3 col">
+            <h2>Latest News</h2>
+            <div class="content-col">
+                <a href="">Aenean tristique justo et...</a>
+                <div class="day">15 March 2019</div>
+            </div>
+            <div class="content-col">
+                <a href="">Aenean tristique justo et...</a>
+                <div class="day">15 March 2019</div>
+            </div>
+            <div class="content-col">
+                <a href="">Aenean tristique justo et...</a>
+                <div class="day">15 March 2019</div>
+            </div>
+        </div>
+        <div class="col4 col">
+            <h2>Business hours</h2>
+            <p>Our support available to help you 24 hours a day, seven days week</p>
+            <p>Monday-Saturday:8.00-18.00
+                Friday:09:00-21:00
+                Sunday:09:00-20:00
+                Calendar Events:24-Hour Shift</p>
         </div>
     </div>
 
